run on Java 17